crates/brioche-macro/tests/ui/fail_manual_impl.stderr
error[E0046]: not all trait items implemented, missing: `build_vtable`
 --> tests/ui/fail_manual_impl.rs:5:1
  |
5 | impl BriocheExtensionType for EvilState {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `build_vtable` in implementation
  |
  = help: implement the missing item: `fn build_vtable() -> ExtVTable { todo!() }`

error[E0277]: the trait bound `EvilState: serde::Deserialize<'de>` is not satisfied
 --> tests/ui/fail_manual_impl.rs:5:31
  |
5 | impl BriocheExtensionType for EvilState {
  |                               ^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `for<'de> Deserialize<'de>` is not implemented for `EvilState`
 --> tests/ui/fail_manual_impl.rs:3:1
  |
3 | pub struct EvilState;
  | ^^^^^^^^^^^^^^^^^^^^
  = note: for local types consider adding `#[derive(serde::Deserialize)]` to your `EvilState` type
  = note: for types from other crates check whether the crate offers a `serde` feature flag
  = help: the following other types implement trait `Deserialize<'de>`:
            &'a Path
            &'a [u8]
            &'a str
            ()
            (T,)
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
          and $N others
  = note: required for `EvilState` to implement `DeserializeOwned`
note: required by a bound in `BriocheExtensionType`
 --> $WORKSPACE/crates/brioche-core/src/extension.rs
  |
  | pub trait BriocheExtensionType:
  |           -------------------- required by a bound in this trait
...
  |     + serde::de::DeserializeOwned
  |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `BriocheExtensionType`

error[E0277]: the trait bound `EvilState: serde::Serialize` is not satisfied
 --> tests/ui/fail_manual_impl.rs:5:31
  |
5 | impl BriocheExtensionType for EvilState {
  |                               ^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `Serialize` is not implemented for `EvilState`
 --> tests/ui/fail_manual_impl.rs:3:1
  |
3 | pub struct EvilState;
  | ^^^^^^^^^^^^^^^^^^^^
  = note: for local types consider adding `#[derive(serde::Serialize)]` to your `EvilState` type
  = note: for types from other crates check whether the crate offers a `serde` feature flag
  = help: the following other types implement trait `Serialize`:
            &'a T
            &'a mut T
            ()
            (T,)
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
            (T0, T1, T2, T3, T4)
          and $N others
note: required by a bound in `BriocheExtensionType`
 --> $WORKSPACE/crates/brioche-core/src/extension.rs
  |
  | pub trait BriocheExtensionType:
  |           -------------------- required by a bound in this trait
...
  |     + serde::Serialize
  |       ^^^^^^^^^^^^^^^^ required by this bound in `BriocheExtensionType`

error[E0277]: the trait bound `EvilState: Default` is not satisfied
 --> tests/ui/fail_manual_impl.rs:5:31
  |
5 | impl BriocheExtensionType for EvilState {
  |                               ^^^^^^^^^ the trait `Default` is not implemented for `EvilState`
  |
note: required by a bound in `BriocheExtensionType`
 --> $WORKSPACE/crates/brioche-core/src/extension.rs
  |
  | pub trait BriocheExtensionType:
  |           -------------------- required by a bound in this trait
...
  |     + Default
  |       ^^^^^^^ required by this bound in `BriocheExtensionType`
help: consider annotating `EvilState` with `#[derive(Default)]`
  |
3 + #[derive(Default)]
4 | pub struct EvilState;
  |

error[E0277]: the trait bound `EvilState: Clone` is not satisfied
 --> tests/ui/fail_manual_impl.rs:5:31
  |
5 | impl BriocheExtensionType for EvilState {
  |                               ^^^^^^^^^ the trait `Clone` is not implemented for `EvilState`
  |
note: required by a bound in `BriocheExtensionType`
 --> $WORKSPACE/crates/brioche-core/src/extension.rs
  |
  | pub trait BriocheExtensionType:
  |           -------------------- required by a bound in this trait
...
  |     + Clone
  |       ^^^^^ required by this bound in `BriocheExtensionType`
help: consider annotating `EvilState` with `#[derive(Clone)]`
  |
3 + #[derive(Clone)]
4 | pub struct EvilState;
  |

error[E0277]: the trait bound `EvilState: brioche_core::extension::__private::Sealed` is not satisfied
 --> tests/ui/fail_manual_impl.rs:5:31
  |
5 | impl BriocheExtensionType for EvilState {
  |                               ^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `brioche_core::extension::__private::Sealed` is not implemented for `EvilState`
 --> tests/ui/fail_manual_impl.rs:3:1
  |
3 | pub struct EvilState;
  | ^^^^^^^^^^^^^^^^^^^^
help: the trait `brioche_core::extension::__private::Sealed` is implemented for `SessionSnapshot`
 --> $WORKSPACE/crates/brioche-core/src/types.rs
  |
  | #[derive(Clone, Debug, Default, PartialEq, Eq, Serialize, Deserialize, BriocheExtensionType)]
  |                                                                        ^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `BriocheExtensionType`
 --> $WORKSPACE/crates/brioche-core/src/extension.rs
  |
  | pub trait BriocheExtensionType:
  |           -------------------- required by a bound in this trait
  |     __private::Sealed
  |     ^^^^^^^^^^^^^^^^^ required by this bound in `BriocheExtensionType`
  = note: this error originates in the derive macro `BriocheExtensionType` (in Nightly builds, run with -Z macro-backtrace for more info)
